--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,26 @@
 {
-  "name": "server",
+  "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "license": "MIT"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "kill": "kill -9 $(lsof -t -i:5000)"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.7",
+    "multer": "^1.4.2",
+    "passport-jwt": "^4.0.0",
+    "path": "^0.12.7"
+  }
 }
