--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,11 @@
     "moment": "^2.24.0",
     "npm": "^6.14.8",
     "password-validator": "^5.0.3",
+    "prop-types": "^15.7.2",
     "query-string": "^6.13.1",
+    "ra-data-json-server": "^3.8.5",
     "react": "^16.13.1",
+    "react-admin": "^3.8.5",
     "react-alert": "^7.0.0",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.13.1",
