Successfull scripts for both server and client without ssl

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,3 +1,10 @@
+upstream nodeapp {
+    server nodeapp:5000;
+}
+
+upstream reactapp {
+    server reactapp:3000;
+}
 server {
     listen 80;
     # server_name expera.live;
@@ -8,12 +15,16 @@ server {
     # }
 
     location / {
-        proxy_pass http://localhost:5000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_pass http://reactapp;
+    }
+
+    location /api {
+        proxy_pass http://nodeapp;
+        # proxy_http_version 1.1;
+        # proxy_set_header Upgrade $http_upgrade;
+        # proxy_set_header Connection 'upgrade';
+        # proxy_set_header Host $host;
+        # proxy_cache_bypass $http_upgrade;
     }
 }
 
