--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -7,12 +7,14 @@ upstream reactapp {
 }
 server {
     listen 80;
-    # server_name expera.live;
+    listen [::]:80;
+
+    server_name alhafeez.qa www.example.com;
     server_tokens off;
 
-    # location /.well-known/acme-challenge/ {
-    #     root /var/www/certbot;
-    # }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
         proxy_pass http://reactapp;
@@ -28,20 +30,20 @@ server {
     }
 }
 
-# server {
-#     listen 443 ssl;
-#     server_name expera.live;
-#     server_tokens off;
+server {
+    listen 443 ssl;
+    server_name alhafeez.qa www.alhafeez.qa;
+    server_tokens off;
 
-#     ssl_certificate /etc/letsencrypt/live/expera.live/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/expera.live/privkey.pem;
-#     include /etc/letsencrypt/options-ssl-nginx.conf;
-#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_certificate /etc/letsencrypt/live/alhafeez.qa/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/alhafeez.qa/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-#     location / {
-#         proxy_pass  http://expera.live;
-#         proxy_set_header    Host                $http_host;
-#         proxy_set_header    X-Real-IP           $remote_addr;
-#         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-#     }
-# }
+    location / {
+        proxy_pass  http://alhafeez.qa;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
