--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,15 +22,18 @@ services:
     image: mongo
     ports:
       - '27017:27017'
-  nginx:
+  nginx-app:
+    container_name: nginx-app
     image: nginx:1.15-alpine
     restart: unless-stopped
     volumes:
       - ./data/nginx:/etc/nginx/conf.d
-      # - ./data/certbot/conf:/etc/letsencrypt
-      # - ./data/certbot/www:/var/www/certbot
+      # - certbot-etc:/etc/letsencrypt
+      # - certbot-var:/var/lib/letsencrypt
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     ports:
-      - "8080:80"
+      - "80:80"
       - "443:443"
     depends_on:
       - reactapp
@@ -39,8 +42,22 @@ services:
     # command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
   # certbot:
   #   image: certbot/certbot
-  #   restart: unless-stopped
+  #   container_name: certbot
   #   volumes:
-  #     - ./data/certbot/conf:/etc/letsencrypt
-  #     - ./data/certbot/www:/var/www/certbot
+  #     - certbot-etc:/etc/letsencrypt
+  #     - certbot-var:/var/lib/letsencrypt
+  #     - web-root:/var/www/html
+  #   depends_on:
+  #     - webserver
+  #   command: certonly --webroot --webroot-path=/var/www/html --email wmfarooqi05@gmail.com --agree-tos --no-eff-email --staging -d alhafeez.qa  -d www.alhafeez.qa
+
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    depends_on:
+      - nginx-app
+    command: certonly --webroot --webroot-path=/var/www/html --email wmfarooqi05@gmail.com --agree-tos --no-eff-email --staging -d alhafeez.qa  -d www.alhafeez.qa
   #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
