--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -9,7 +9,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name alhafeez.qa www.example.com;
+    server_name alhafeez.qa www.alhafeez.qa;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -33,7 +33,7 @@ server {
 server {
     listen 443 ssl;
     server_name alhafeez.qa www.alhafeez.qa;
-    server_tokens off;
+#     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/alhafeez.qa/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/alhafeez.qa/privkey.pem;
@@ -42,8 +42,8 @@ server {
 
     location / {
         proxy_pass  http://alhafeez.qa;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+#         proxy_set_header    Host                $http_host;
+#         proxy_set_header    X-Real-IP           $remote_addr;
+#         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
 }
