--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 services:
   reactapp: 
     container_name: reactapp
@@ -22,14 +22,11 @@ services:
     image: mongo
     ports:
       - '27017:27017'
-  nginx-app:
-    container_name: nginx-app
+  nginx:
     image: nginx:1.15-alpine
     restart: unless-stopped
     volumes:
       - ./data/nginx:/etc/nginx/conf.d
-      # - certbot-etc:/etc/letsencrypt
-      # - certbot-var:/var/lib/letsencrypt
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     ports:
@@ -40,17 +37,6 @@ services:
     external_links:
       - reactapp
     # command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-  # certbot:
-  #   image: certbot/certbot
-  #   container_name: certbot
-  #   volumes:
-  #     - certbot-etc:/etc/letsencrypt
-  #     - certbot-var:/var/lib/letsencrypt
-  #     - web-root:/var/www/html
-  #   depends_on:
-  #     - webserver
-  #   command: certonly --webroot --webroot-path=/var/www/html --email wmfarooqi05@gmail.com --agree-tos --no-eff-email --staging -d alhafeez.qa  -d www.alhafeez.qa
-
   certbot:
     image: certbot/certbot
     restart: unless-stopped
@@ -58,6 +44,6 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     depends_on:
-      - nginx-app
-    command: certonly --webroot --webroot-path=/var/www/html --email wmfarooqi05@gmail.com --agree-tos --no-eff-email --staging -d alhafeez.qa  -d www.alhafeez.qa
-  #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - nginx
+    command: certonly --webroot --webroot-path=/var/www/certbot --email wmfarooqi05@gmail.com --agree-tos --no-eff-email --staging -d alhafeez.qa  -d www.alhafeez.qa
+    # entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
