--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-admin": "^3.8.5",
     "react-alert": "^7.0.0",
     "react-alert-template-basic": "^1.0.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
     "react-geocode": "^0.2.1",
@@ -43,10 +44,12 @@
     "react-google-maps": "^9.4.5",
     "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
+    "react-images-uploading": "^3.1.2",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-loader-spinner": "^3.1.14",
     "react-modal": "^3.11.2",
     "react-native-webview": "^10.3.2",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.4",
     "react-router-dom": "^5.1.2",
