--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "npm": "^6.14.8",
     "password-validator": "^5.0.3",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^1.0.0",
     "query-string": "^6.13.1",
     "ra-data-json-server": "^3.8.5",
     "react": "^16.13.1",
