--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "react-responsive-carousel": "^3.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-to-print": "^2.10.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
