add new product

--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "grommet-icons": "^4.4.0",
     "history": "^4.10.1",
     "i": "^0.3.6",
+    "image-to-base64": "^2.1.1",
     "jss": "^10.1.1",
     "jss-rtl": "^0.3.0",
     "moment": "^2.24.0",
