--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "react-loader-spinner": "^3.1.14",
     "react-modal": "^3.11.2",
     "react-native-webview": "^10.3.2",
+    "react-print": "^1.3.1",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.4",
