--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -28,6 +28,11 @@ server {
         # proxy_set_header Host $host;
         # proxy_cache_bypass $http_upgrade;
     }
+    
+    location /uploads/ {
+        alias /var/www/nodejsapp/files/images/;
+        autoindex off;
+    }
 }
 
 server {
