updated conf for react

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -17,7 +17,7 @@ server {
     }
 
     location / {
-        proxy_pass http://reactapp;
+        root /var/www/reactapp/build;
     }
 
     location /api {
