--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       - 3000:3000
     depends_on:
       - nodeapp
+    volumes:
+      - ./data/reactapp/build:/home/react/app/build
   nodeapp:
     container_name: nodeapp
     restart: always
@@ -35,6 +37,7 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
       - ./data/nodejsapp/files/images:/var/www/nodejsapp/files/images
+      - ./data/reactapp/build:/var/www/reactapp/build
     ports:
       - "80:80"
       - "443:443"
