--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,8 @@ services:
     image: nginx:1.15-alpine
     restart: unless-stopped
     volumes:
-      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/nginx/conf.d:/etc/nginx/conf.d
+      - ./data/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
       - ./data/nodejsapp/files/images:/var/www/nodejsapp/files/images
@@ -42,7 +43,7 @@ services:
       - reactapp
     external_links:
       - reactapp
-    # command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
   certbot:
     image: certbot/certbot
     restart: unless-stopped
@@ -52,4 +53,4 @@ services:
     depends_on:
       - nginx
     command: certonly --webroot --webroot-path=/var/www/certbot --email wmfarooqi05@gmail.com --agree-tos --no-eff-email --staging -d alhafeez.qa  -d www.alhafeez.qa
-    # entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
