--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,8 @@
     "react-image-magnify": "^2.7.4",
     "react-images-uploading": "^3.1.2",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-lazy-load": "^3.1.13",
+    "react-lazyload": "^3.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-modal": "^3.11.2",
     "react-native-webview": "^10.3.2",
