--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-images-uploading": "^3.1.2",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-lazy-load": "^3.1.13",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-lazyload": "^3.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-modal": "^3.11.2",
